# openstack-ansible-openstack_hosts

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  run_tests.sh  setup.cfg  tox.ini
defaults/: main.yml
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
tasks/: configure_metal_hosts.yml  main.yml  openstack_authorized_keys.yml  openstack_gitconfig.yml  openstack_grub.yml  openstack_host_install.yml  openstack_host_install_apt.yml  openstack_host_install_dnf.yml  openstack_host_install_yum.yml  openstack_host_install_zypper.yml  openstack_host_packages.yml  openstack_hosts_ca_certificates.yml  openstack_hosts_configure_apt.yml  openstack_hosts_configure_dnf.yml  openstack_hosts_configure_portage.yml  openstack_hosts_configure_yum.yml  openstack_hosts_configure_zypper.yml  openstack_hosts_systemd.yml  openstack_kernel_check.yml  openstack_kernel_modules.yml  openstack_kernel_tuning.yml  openstack_proxy_settings.yml  openstack_release.yml  openstack_sysstat.yml  openstack_update_environment.yml  openstack_update_hosts_file.yml
templates/: environment.j2  gitconfig.j2  lvm.conf.j2  modprobe.conf.j2  openstack-host-hostfile-setup.sh.j2  openstack-release.j2  sysstat.cron.gentoo.j2
tests/: ansible-role-requirements.yml  inventory  openstack_hosts-overrides.yml  test-create-ca.yml  test.yml
vars/: debian-9.yml  debian.yml  gentoo.yml  redhat-10.yml  redhat-7.yml  redhat-8.yml  redhat-9.yml  redhat.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml  ubuntu-18.04.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  (+2 more)
(+5 files in other folders)
